--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,35 +1,41 @@
-# Resolve react_native_pods.rb with node to allow for hoisting
-require Pod::Executable.execute_command('node', ['-p',
-  'require.resolve(
-    "react-native/scripts/react_native_pods.rb",
-    {paths: [process.argv[1]]},
-  )', __dir__]).strip
 
-platform :ios, min_ios_version_supported
+platform :ios, '17'  
+require_relative '../node_modules/react-native-permissions/scripts/setup.rb'
+require Pod::Executable.execute_command('node', ['-p',
+  'require.resolve("react-native/scripts/react_native_pods.rb", {paths: [process.argv[1]]})',
+  __dir__
+]).strip
+
 prepare_react_native_project!
 
 linkage = ENV['USE_FRAMEWORKS']
-if linkage != nil
-  Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
-  use_frameworks! :linkage => linkage.to_sym
-end
+use_frameworks! :linkage => linkage.to_sym if linkage
 
 target 'appCrossPlatform' do
   config = use_native_modules!
 
   use_react_native!(
     :path => config[:reactNativePath],
-    # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  setup_permissions([
+    'LocationWhenInUse',
+  ])
+
   post_install do |installer|
-    # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
       installer,
       config[:reactNativePath],
-      :mac_catalyst_enabled => false,
-      # :ccache_enabled => true
+      :mac_catalyst_enabled => false
     )
+
+    # Fuerza iOS 13.4 en todos los pods si alguno quedó más bajo
+    installer.pods_project.targets.each do |t|
+      t.build_configurations.each do |cfg|
+        cur = cfg.build_settings['IPHONEOS_DEPLOYMENT_TARGET']
+        cfg.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.4' if cur.nil? || cur.to_f < 13.4
+      end
+    end
   end
 end
