--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-picker/picker": "^2.11.1",
+    "@react-native-vector-icons/ionicons": "^12.3.0",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "firebase": "^12.1.0",
+    "geofire-common": "^6.0.0",
     "react": "19.0.0",
     "react-native": "0.78.3",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-maps": "^1.25.3",
+    "react-native-permissions": "^5.4.2",
     "react-native-safe-area-context": "^5.6.0",
     "react-native-screens": "^4.13.1",
-    "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
