--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.78.3",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-maps": "^1.25.3",
     "react-native-permissions": "^5.4.2",
     "react-native-safe-area-context": "^5.6.0",
