--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "geofire-common": "^6.0.0",
     "react": "19.0.0",
     "react-native": "0.78.3",
+    "react-native-calendars": "^1.1313.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^8.2.1",
